force-app/main/default/objects/Cruise_Cabin_Booking_POE__c/fields/cabin_number__c.field-meta.xml
<CustomField>
    <fullName>cabin_number__c</fullName>
    <label>Cabin Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>