force-app/main/default/objects/Cruise_Cabin_Booking_POE__c/fields/cabin_price__c.field-meta.xml
<CustomField>
    <fullName>cabin_price__c</fullName>
    <label>Cabin Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>