force-app/main/default/objects/Cruise_Cabin_Booking_POE__c/fields/Cruise_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Cruise_Company_Name__c</fullName>
    <formula>cruise_company__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cruise Company Name</label>
    <type>Text</type>
</CustomField>