force-app/main/default/objects/Cruise_Cabin_Booking_POE__c/fields/mp_Cruise_Company__c.field-meta.xml
<CustomField>
    <fullName>mp_Cruise_Company__c</fullName>
    <label>Cruise Company</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MSC</fullName>
            </value>
            <value>
                <fullName>Royal Caribbean</fullName>
            </value>
            <value>
                <fullName>Celebrity Cruises</fullName>
            </value>
            <value>
                <fullName>Costa Cruises</fullName>
            </value>
            <value>
                <fullName>Norwegian Cruise Lines</fullName>
            </value>
            <value>
                <fullName>Carnival Cruises</fullName>
            </value>
            <value>
                <fullName>Holland America</fullName>
            </value>
            <value>
                <fullName>Princess Cruises</fullName>
            </value>
            <value>
                <fullName>P&amp;O Cruises</fullName>
            </value>
            <value>
                <fullName>CMV Cruises</fullName>
            </value>
            <value>
                <fullName>Oceania Cruises</fullName>
            </value>
            <value>
                <fullName>Virgin Voyages</fullName>
            </value>
            <value>
                <fullName>Dream Cruises</fullName>
            </value>
            <value>
                <fullName>Captain Cook Cruises</fullName>
            </value>
            <value>
                <fullName>Pullmantur</fullName>
            </value>
            <value>
                <fullName>Hurtigruten</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>