force-app/main/default/objects/Cruise_Cabin_Booking_POE__c/fields/ordexp_tad_order__c.field-meta.xml
<CustomField>
    <fullName>ordexp_tad_order__c</fullName>
    <label>TAD Order</label>
    <referenceTo>TAD_Order__c</referenceTo>
    <relationshipLabel>Cruise Cabin Bookings</relationshipLabel>
    <relationshipName>Cruise_Cabin_Bookings_POE</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>