force-app/main/default/objects/Cruise_Cabin_Booking_POE__c/fields/partner_purchased__c.field-meta.xml
<CustomField>
    <fullName>partner_purchased__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Partner Purchased</label>
    <type>Checkbox</type>
</CustomField>