force-app/main/default/objects/Cruise_Cabin_Booking_POE__c/fields/ship_name__c.field-meta.xml
<CustomField>
    <fullName>ship_name__c</fullName>
    <label>Ship Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>