force-app/main/default/objects/Cruise_Cabin_Booking_POE__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>cruise_company__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>cruise_booking_reference__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>